# santa_cruz_server

./: .env.example  .gitignore  .gitmodules  Cargo.toml  build.rs  docker-compose.yml
migrations/: 20220322075011_workouts.sql  20220325094144_workouts_rates_fields.sql  20220329045646_workout-sets.sql  20220329083306_exercises.sql  20220329091202_workout_repeat.sql  20220329123356_users.sql  20220329123910_sessions.sql  20220330105405_workouts_permissions.sql  20220330114816_workout_sets_permissions.sql  20220330124500_workout_repeats_permissions.sql  20220418064232_change_workouts_status_column_type.sql
proto/: exercise.proto  main.proto  workout.proto  workout_repeat.proto
src/: auth_interception.rs  auth_interceptor.rs  auth_service.rs  exercise_service.rs  main.rs  me_extension.rs  query_builder.rs  queryable.rs  services.rs  sessions_cache.rs  user_service.rs  workout_repeat_service.rs  workout_service.rs  workout_set.rs  workout_set_service.rs
src/proto/: proto.rs  santa_cruz.rs
