[package]
name = "santa_cruz_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
prost = "0.9"
quote = "1.0"
argon2 = "0.4"
dotenv = "0.15"
rustfmt = "0.10.0"
env_logger = "0.9"
serde_json = "1.0"
tonic-web = "0.2.0"
prost-types = "0.9"
serde_derive = "1.0"
clap = { version = "3.1", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
rand_core = { version = "0.6", features = ["std"] }
sqlx = { version = "0.5", features = ["postgres", "runtime-tokio-native-tls", "chrono", "json", "any"] }
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
tonic = { version = "0.6", features = ["transport", "tls", "tls-roots", "prost"] }
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }

[build-dependencies]
tonic-build = "0.6"

[dependencies.santa_cruz_codegen]
path = "packages/codegen"
